--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
     <title>Інтернет-магазин</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+
         .filtet {
             margin-left: 250px;
         }
+
+        button {
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        button:hover {
+            background-color: #007bff;
+            transform: scale(1.05);
+        }
+
 
         #shopping-cart {
             position: absolute;
@@ -139,6 +155,104 @@
             background-color: #0056b3;
             border-color: #0056b3;
         }
+
+        /* Адаптація для маленьких екранів */
+        @media (max-width: 768px) {
+            .navbar-nav {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .navbar-brand {
+                font-size: 2rem;
+            }
+
+            .cart-icon {
+                width: 25px;
+                height: 25px;
+            }
+
+            .filtet {
+                margin-left: 0;
+                padding: 0 10px;
+            }
+
+            .row {
+                row-gap: 15px;
+            }
+
+            .col-md-4 {
+                flex: 0 0 100%;
+                /* Продукти на всю ширину */
+                max-width: 100%;
+            }
+
+            .card {
+                margin: 10px auto;
+            }
+
+            .card-img-top {
+                max-height: 200px;
+                object-fit: cover;
+            }
+
+            #shopping-cart {
+                width: 90%;
+                right: 5%;
+                top: 50px;
+            }
+
+            .cart-icon {
+                margin-right: 10px;
+            }
+
+            table {
+                font-size: 0.9rem;
+            }
+
+            th,
+            td {
+                padding: 5px;
+            }
+
+            .submit {
+                font-size: 0.9rem;
+                padding: 5px 10px;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .navbar-brand {
+                font-size: 1.8rem;
+            }
+
+            .nav-link {
+                font-size: 1rem;
+                margin: 5px 0;
+            }
+
+            .btn-primary {
+                font-size: 0.9rem;
+            }
+
+            .modal-body {
+                font-size: 1rem;
+            }
+
+            h1,
+            h2,
+            h3 {
+                font-size: 1.5rem;
+            }
+
+            .card-title {
+                font-size: 1rem;
+            }
+
+            .card-text {
+                font-size: 0.9rem;
+            }
+        }
     </style>
 </head>
 
@@ -193,7 +307,8 @@
             </tbody>
         </table>
         <h3>Загальна вартість: <span id="total-price">0 грн</span></h3>
-        <button class="submit" data-bs-toggle="modal" data-bs-target="#buyModal" id="checkout-button">Оформити замовлення</button>
+        <button class="submit" data-bs-toggle="modal" data-bs-target="#buyModal" id="checkout-button">Оформити
+            замовлення</button>
     </div>
 
     <div class="container mt-5" id="filters">
