--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <!-- Товар 5 -->
             <div class="col-md-4 product" data-category="consoles" data-price="12000" data-rating="4" data-brand="sony">
                 <div class="card">
-                    <img src="https://brain.com.ua/static/images/prod_img/8/0/U0887380_big_1735614171.jpg"
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUEJ9iU5Bme0SBwQfal2P8c0VtmuynWVUpWg&s"
                         class="card-img-top" alt="Ігрова консоль">
                     <div class="card-body">
                         <h5 class="card-title">Ігрова консоль Sony PlayStation 5</h5>
