--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <svg class="logo">
-                <use href="./symbol-defs-2.svg#icon-cart"></use>
+                <use href="./symbol-defs.svg#icon-cart"></use>
             </svg>
             <a class="navbar-brand mx-auto" href="./index.html">Black<span class="span">bird</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
